projet_gl/src/test/deca/context/valid/3_28/3_28_Rvalue_Boolean.deca
// Description:
//    Programme test si le Rvalue donne un type attendu: Boolean
//
// Resultats:
//    
//
// Historique:
//    cree le 09/01/2024

{
        boolean c = true;
}