projet_gl/src/test/deca/context/invalid/3_28/3_28_3_Rvalue.deca
// Description:
//    Problème de Rvalue ne correspond pas au type attendu
//
// Resultats:
//    Ligne 11: Expected type: boolean but the returned type: int
// 
// Historique:
//    cree le 09/01/2024

{   
   boolean c = 23;
}
